# Bumper-Bot-Main-New

./: CODEX_ACTIVE_SLAM_BUMPERBOT_V1.md
src/bumperbot_active_slam/: README.md  package.xml  setup.cfg  setup.py
src/bumperbot_active_slam/bumperbot_active_slam/: active_slam_node.py
src/bumperbot_active_slam/config/: active_slam.yaml
src/bumperbot_active_slam/launch/: active_slam.launch.py
src/bumperbot_bringup/: package.xml
src/bumperbot_bringup/launch/: active_slam_simulated_robot.launch.py  simulated_robot.launch.py
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/worlds/: active_slam_test.world
src/bumperbot_localization/launch/: local_localization.launch.py
src/bumperbot_navigation/: package.xml
src/bumperbot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  collision_monitor.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  velocity_smoother.yaml
src/bumperbot_navigation/launch/: navigation.launch.py
src/bumperbot_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/bumperbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
